Fix recommendation, images distrotion and WEBP images are a WIP
fix recommmendation
- trending and similar articles don't have a common post between them

image distrotion
- image is a bit cropped but better than distroted, used object-fit property in css.

WEBP images are a work in progress
- there is some issue in serving of the images which will be fixed later.
- all packages including Django have been updated to make use of this package.

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -32,6 +32,7 @@ h6 {
 img {
     max-width: 100%;
     height: auto;
+    object-fit: cover;
 }
 ul {
     margin: 0;
